[project]
name = "catalyst-python"
version = "0.1.0"
description = "Catalyst python library"
readme = "README.md"
authors = [
    { name = "Mr-Leshiy", email = "leshiy12345678@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "python-bitcoinlib>=0.12.2",
]

[project.scripts]
catalyst-python = "catalyst_python:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
