# cspell: words bitcoinlib

[project]
name = "catalyst-python"
version = "0.1.0"
description = "Catalyst python library"
readme = "README.md"
authors = [
    { name = "Mr-Leshiy", email = "leshiy12345678@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.3",
    "ipfs-cid>=1.0.0",
    "pycardano>=0.18.0",
    "python-bitcoinlib>=0.12.2",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
