[workspace]
resolver = "3"
members = [
    "c509-certificate",
    "cardano-blockchain-types",
    "cardano-chain-follower",
    "hermes-ipfs",
    "cbork",
    "cbork-abnf-parser",
    "cbork-cddl-parser",
    "cbork-utils",
    "catalyst-contest",
    "catalyst-voting",
    "catalyst-types",
    "immutable-ledger",
    "vote-tx-v1",
    "vote-tx-v2",
    "signed_doc",
    "catalyst-signed-doc-macro",
    "catalyst-signed-doc-spec",
    "rbac-registration"
]

[workspace.package]
edition = "2024"
authors = ["Steven Johnson <steven.johnson@iohk.io>"]
homepage = "https://github.com/input-output-hk/catalyst-libs"
repository = "https://github.com/input-output-hk/catalyst-libs"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
warnings = "deny"
missing_docs = "deny"
let_underscore_drop = "deny"
non_ascii_idents = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
exit = "deny"
get_unwrap = "deny"
index_refutable_slice = "deny"
indexing_slicing = "deny"
match_wild_err_arm = "deny"
missing_panics_doc = "deny"
panic = "deny"
string_slice = "deny"
unchecked_duration_subtraction = "deny"
unreachable = "deny"
missing_docs_in_private_items = "deny"
arithmetic_side_effects = "deny"
