[package]
name = "c509-certificate"
description = "C509 certificate implementation"
keywords = ["cardano", "catalyst", "c509 certificate", "certificate", "x509"]
version = "0.0.3"
authors = [
    "Arissara Chotivichit <arissara.chotivichit@iohk.io>"
]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
minicbor = { version = "0.25.1", features = ["std"] }
hex = "0.4.3"
oid = "0.2.1"
oid-registry = "0.7.0"
asn1-rs = "0.6.0"
anyhow = "1.0.86"
bimap = "0.6.3"
once_cell = "1.19.0"
strum = "0.26.3"
strum_macros = "0.26.3"
regex = "1.10.5"
ed25519-dalek = { version = "2.1.1", features = ["pem"] }
thiserror = "1.0.56"
serde = { version = "1.0.204", features = ["derive"] }
wasm-bindgen = "0.2.92"
serde-wasm-bindgen = "0.6.5"

[package.metadata.cargo-machete]
ignored = ["strum"]

[dev-dependencies]
clap = { version = "4.5.9", features = ["derive"] }
serde_json = "1.0.120"
rand = "0.8.5"
chrono = "0.4.38"

[[example]]
name = "c509"
path = "examples/cli/main.rs"
