[package]
name = "c509-certificate"
description = "C509 certificate implementation"
keywords = ["cardano", "catalyst", "c509 certificate", "certificate", "x509"]
version = "0.0.3"
authors = [
    "Arissara Chotivichit <arissara.chotivichit@iohk.io>"
]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
minicbor = { version = "0.25.1", features = ["std"] }
hex = "0.4.3"
oid = "0.2.1"
oid-registry = "0.7.1"
asn1-rs = "0.6.2"
anyhow = "1.0.95"
bimap = "0.6.3"
once_cell = "1.20.2"
strum = "0.26.3"
strum_macros = "0.26.4"
regex = "1.11.1"
ed25519-dalek = { version = "2.1.1", features = ["pem"] }
thiserror = "2.0.9"
serde = { version = "1.0.217", features = ["derive"] }

# Only re-enable when building targeting wasm is detected, should not be used in a non wasm build.
#wasm-bindgen = "0.2.99"
#serde-wasm-bindgen = "0.6.5"

[package.metadata.cargo-machete]
ignored = ["strum"]

[dev-dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde_json = "1.0.134"
rand = "0.8.5"
chrono = "0.4.39"

[[example]]
name = "c509"
path = "examples/cli/main.rs"
