[package]
name = "cardano-blockchain-types"
description = "Common Cardano Blockchain data types for use in both applications and crates"
keywords = ["cardano", "catalyst", ]
version = "0.1.5"
authors = [
    "Steven Johnson <steven.johnson@iohk.io>"
]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
catalyst-types = { version = "0.1.5", git = "https://github.com/input-output-hk/catalyst-libs.git", branch = "wasm/catalyst-types" }
cbork-utils = { version = "0.0.2", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "cbork-utils-v0.0.2" }

ouroboros = "0.18.4"
tracing = "0.1.41"
anyhow = "1.0.94"
chrono = "0.4.39"
strum = { version = "0.26.3", features = ["derive"] }
dirs = "5.0.1"
hex = "0.4.3"
dashmap = "6.1.0"
blake2b_simd = "1.0.2"
minicbor = { version = "0.25.1", features = ["alloc"] }
num-traits = "0.2.19"
ed25519-dalek = "2.1.1"
serde = "1.0.210"
num-bigint = "0.4.6"
serde_json = "1.0.134"
displaydoc = "0.2.5"
thiserror = "2.0.11"

# Remove
pallas-traverse = { git = "https://github.com/input-output-hk/catalyst-pallas.git", branch = "feat/pallas-network-types" }
pallas-addresses = { git = "https://github.com/input-output-hk/catalyst-pallas.git", branch = "feat/pallas-network-types" }
pallas-primitives = { git = "https://github.com/input-output-hk/catalyst-pallas.git", branch = "feat/pallas-network-types" }
pallas-crypto = { git = "https://github.com/input-output-hk/catalyst-pallas.git", branch = "feat/pallas-network-types" }
pallas-codec = { git = "https://github.com/input-output-hk/catalyst-pallas.git", branch = "feat/pallas-network-types" }
# Only include these for non-wasm32 targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pallas-network = { git = "https://github.com/input-output-hk/catalyst-pallas.git", branch = "feat/pallas-network-types" }
pallas-hardano = { git = "https://github.com/input-output-hk/catalyst-pallas.git", branch = "feat/pallas-network-types" }