[package]
name = "cardano-blockchain-types"
description = "Common Cardano Blockchain data types for use in both applications and crates"
keywords = ["cardano", "catalyst", ]
version = "0.0.9"
authors = [
    "Steven Johnson <steven.johnson@iohk.io>"
]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
catalyst-types = { git = "https://github.com/input-output-hk/catalyst-libs.git", branch = "hack-do-not-merge-simple-versions" }
cbork-utils = { version = "0.0.2", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "cbork-utils-v0.0.2" }

ouroboros = "0.18.4"
tracing = "0.1.41"
anyhow = "1.0.94"
chrono = "0.4.39"
strum = { version = "0.26.3", features = ["derive"] }
dirs = "5.0.1"
hex = "0.4.3"
dashmap = "6.1.0"
blake2b_simd = "1.0.2"
minicbor = { version = "0.25.1", features = ["alloc"] }
num-traits = "0.2.19"
ed25519-dalek = "2.1.1"
serde = "1.0.210"
num-bigint = "0.4.6"
displaydoc = "0.2.5"
thiserror = "2.0.11"

# TODO: Revert ALL to Upstream Pallas after <https://github.com/txpipe/pallas/pull/685> merges. 
# pallas related commit is from <https://github.com/input-output-hk/catalyst-pallas/pull/4>
pallas-traverse = { version = "=1.0.0-alpha.2", git = "https://github.com/input-output-hk/catalyst-pallas.git", rev = "9c6322e6b51916b2cc54ba713b07bb25ef07dd00" }
pallas-addresses = { version = "=1.0.0-alpha.2", git = "https://github.com/input-output-hk/catalyst-pallas.git", rev = "9c6322e6b51916b2cc54ba713b07bb25ef07dd00" }
pallas-primitives = { version = "=1.0.0-alpha.2", git = "https://github.com/input-output-hk/catalyst-pallas.git", rev = "9c6322e6b51916b2cc54ba713b07bb25ef07dd00" }
pallas-crypto = { version = "=1.0.0-alpha.2", git = "https://github.com/input-output-hk/catalyst-pallas.git", rev = "9c6322e6b51916b2cc54ba713b07bb25ef07dd00" }
pallas-codec = { version = "=1.0.0-alpha.2", git = "https://github.com/input-output-hk/catalyst-pallas.git", rev = "9c6322e6b51916b2cc54ba713b07bb25ef07dd00" }
# Only include these for non-wasm32 targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pallas-network = { version = "=1.0.0-alpha.2", git = "https://github.com/input-output-hk/catalyst-pallas.git", rev = "9c6322e6b51916b2cc54ba713b07bb25ef07dd00" }
pallas-hardano = { version = "=1.0.0-alpha.2", git = "https://github.com/input-output-hk/catalyst-pallas.git", rev = "9c6322e6b51916b2cc54ba713b07bb25ef07dd00" }