[package]
name = "cardano-chain-follower"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
pallas = { git = "https://github.com/input-output-hk/catalyst-pallas.git", rev = "9b5183c8b90b90fe2cc319d986e933e9518957b3", version = "0.30.1" }
pallas-hardano = { git = "https://github.com/input-output-hk/catalyst-pallas.git", rev = "9b5183c8b90b90fe2cc319d986e933e9518957b3", version = "0.30.1" }

thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["macros", "rt", "net", "rt-multi-thread"] }
tracing = "0.1.40"

[dev-dependencies]
hex = "0.4.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
