[package]
name = "cardano-chain-follower"
version = "0.0.3"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
pallas = { version = "0.30.1", git = "https://github.com/input-output-hk/catalyst-pallas.git", rev = "9b5183c8b90b90fe2cc319d986e933e9518957b3" }
pallas-hardano = { version = "0.30.1", git = "https://github.com/input-output-hk/catalyst-pallas.git", rev = "9b5183c8b90b90fe2cc319d986e933e9518957b3" }
pallas-crypto = { version = "0.30.1", git = "https://github.com/input-output-hk/catalyst-pallas.git", rev = "9b5183c8b90b90fe2cc319d986e933e9518957b3" }

# cspell: words licence
#mithril-client = { version = "0.8.16", git = "https://github.com/input-output-hk/catalyst-mithril.git", branch = "fix/lgpl-licence", default-features = false, features = [
mithril-client = { version = "0.8.18", default-features = false, features = [
    "full",
    "num-integer-backend",
] }

c509-certificate = { version = "0.0.1", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "v0.0.1" }

thiserror = "1.0.64"
tokio = { version = "1.40.0", features = [
    "macros",
    "rt",
    "net",
    "rt-multi-thread",
] }
tracing = "0.1.40"
tracing-log = "0.2.0"
dashmap = "6.1.0"
url = "2.5.2"
anyhow = "1.0.89"
chrono = "0.4.38"
async-trait = "0.1.83"
dirs = "5.0.1"
futures = "0.3.31"
humantime = "2.1.0"
crossbeam-skiplist = "0.1.3"
crossbeam-channel = "0.5.13"
crossbeam-epoch = "0.9.18"
strum = "0.26.3"
ouroboros = "0.18.4"
hex = "0.4.3"
rayon = "1.10.0"
serde = "1.0.210"
serde_json = "1.0.128"
mimalloc = { version = "0.1.43", optional = true }
memx = "0.1.32"
fmmap = { version = "0.3.3", features = ["sync", "tokio-async"] }
minicbor = { version = "0.25.1", features = ["alloc", "derive", "half"] }
brotli = "7.0.0"
zstd = "0.13.2"
x509-cert = "0.2.5"
ed25519-dalek = "2.1.1"
blake2b_simd = "1.0.2"
num-traits = "0.2.19"
logcall = "0.1.9"
tar = "0.4.42"
ureq = { version = "2.10.1", features = ["native-certs"] }
http = "1.1.0"
hickory-resolver = { version = "0.24.1", features = ["dns-over-rustls"] }
moka = { version = "0.12.8", features = ["sync"] }
der-parser = "9.0.0"
regex = "1.11.0"
bech32 = "0.11.0"

[dev-dependencies]
hex = "0.4.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
test-log = { version = "0.2.16", default-features = false, features = [
    "trace",
] }
clap = "4.5.19"

# Note, these features are for support of features exposed by dependencies.
[features]
default = ["rustls-tls-native-roots"]

# Enable the MiMalloc global allocator
# Only used for examples.
mimalloc = ["dep:mimalloc"]

# These features are for support of dependent crates only.
# They do not change the operation of the main crate.
# cspell: words alpn
native-tls = ["mithril-client/native-tls"]
native-tls-alpn = ["mithril-client/native-tls-alpn"]
native-tls-vendored = ["mithril-client/native-tls-vendored"]

rustls-tls = ["mithril-client/rustls-tls"]
rustls-tls-manual-roots = ["mithril-client/rustls-tls-manual-roots"]
rustls-tls-webpki-roots = ["mithril-client/rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["mithril-client/rustls-tls-native-roots"]
