[package]
name = "cardano-chain-follower"
version = "0.0.19"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mithril-client = { version = "=0.12.2", default-features = false, features = [
    "full",
    "num-integer-backend",
] }

cardano-blockchain-types = { path = "../cardano-blockchain-types" }
catalyst-types = { path = "../catalyst-types" }

thiserror = "1.0.69"
tokio = { version = "1.45.0", features = [
    "macros",
    "rt",
    "net",
    "rt-multi-thread",
] }
tracing = "0.1.41"
tracing-log = "0.2.0"
dashmap = { version = "6.1.0", features = ["serde"] }
url = "2.5.4"
anyhow = "1.0.95"
chrono = "0.4.39"
async-trait = "0.1.83"
futures = "0.3.31"
humantime = "2.1.0"
crossbeam-skiplist = "0.1.3"
crossbeam-channel = "0.5.14"
crossbeam-epoch = "0.9.18"
strum = "0.26.3"
hex = "0.4.3"
rayon = "1.10.0"
serde = "1.0.217"
serde_json = "1.0.134"
mimalloc = { version = "0.1.43", optional = true }
memx = "0.1.32"
zstd = "0.13.2"
logcall = "0.1.11"
tar = "0.4.43"
ureq = { version = "2.12.1", features = ["native-certs"] }
http = "1.2.0"
hickory-resolver = { version = "0.24.2", features = ["dns-over-rustls"] }
moka = { version = "0.12.9", features = ["sync"] }
cpu-time = "1.0.0"

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
test-log = { version = "0.2.16", default-features = false, features = [
    "trace",
] }
clap = "4.5.23"
rbac-registration = { version = "0.0.15", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "rbac-registration/v0.0.15" }
minicbor = { version = "2.0.0", features = ["alloc", "half"] }

# Note, these features are for support of features exposed by dependencies.
[features]
default = ["rustls-tls-native-roots"]

# Enable the MiMalloc global allocator
# Only used for examples.
mimalloc = ["dep:mimalloc"]

# These features are for support of dependent crates only.
# They do not change the operation of the main crate.
# cspell: words alpn
native-tls = ["mithril-client/native-tls"]
native-tls-alpn = ["mithril-client/native-tls-alpn"]
native-tls-vendored = ["mithril-client/native-tls-vendored"]

rustls-tls = ["mithril-client/rustls-tls"]
rustls-tls-manual-roots = ["mithril-client/rustls-tls-manual-roots"]
rustls-tls-webpki-roots = ["mithril-client/rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["mithril-client/rustls-tls-native-roots"]
