[package]
name = "catalyst-contest"
description = "Catalyst voting (contest)"
keywords = ["cardano", "catalyst", "voting", "contest"]
version = "0.0.1"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"

# TODO: Use tag instead of path.
catalyst-signed-doc = { version = "0.0.10", path = "../signed_doc" }
catalyst-voting = { version = "0.0.2", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "catalyst-voting/v0.0.2" }

cbork-utils = { version = "0.0.4", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "cbork-utils/v0.0.4" }

futures = "0.3.31"
minicbor = { version = "0.25.1", features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27", features = ["derive"] }

[dev-dependencies]
proptest = { version = "1.6.0", features = ["attr-macro"] }
proptest-derive = "0.5.1"
