[package]
name = "catalyst-signed-doc-spec"
version = "0.1.3"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde_json = "1.0.142"
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }

quote = "1.0"
proc-macro2 = "1.0"
build-info = "0.0.39"

[build-dependencies]
build-info-build = "0.0.39"
