[package]
name = "catalyst-signed-doc-tests-utils"
description = "Catalyst Signed Document testing utilities"
version = "0.0.10" # Version must aling with the 'catalyst-signed-doc' crate version
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
catalyst-signed-doc = { version = "0.0.10", path = "../signed_doc" }
