[package]
name = "catalyst-types"
version = "0.0.3"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[lib]
name = "catalyst_types"

[dependencies]
blake2b_simd = "1.0.2"
displaydoc = "0.2.5"
ed25519-dalek = "2.1.1"
fluent-uri = "0.3.2"
hex = "0.4.3"
minicbor = { version = "0.25.1", features = ["std"] }
num-traits = "0.2.19"
orx-concurrent-vec = { version = "3.6.0", features = ["serde"] }
pallas-crypto = { version = "0.30.1", git = "https://github.com/input-output-hk/catalyst-pallas.git", rev = "9b5183c8b90b90fe2cc319d986e933e9518957b3" }
serde = { version = "1.0.217", features = ["derive", "rc"] }
thiserror = "2.0.11"
base64-url = "3.0.0"
uuid = { version = "1.12.0", features = ["v4", "v7", "serde"] }
chrono = "0.4.39"
fmmap = { version = "0.4.0", features = ["sync", "tokio"] }
once_cell = "1.20.2"
tracing = "0.1.41"
strum = { version = "0.27.1", features = ["derive"] }

[dev-dependencies]
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
proptest = { version = "1.6.0", features = ["attr-macro"] }
rand = "0.8.5"
serde_json = "1"
