[package]
name = "catalyst-types"
version = "0.0.14"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[lib]
name = "catalyst_types"

[dependencies]
displaydoc = "0.2.5"
ed25519-dalek = "2.1.1"
fluent-uri = "0.3.2"
minicbor = { version = "0.25.1", features = ["std"] }
num-traits = "0.2.19"
orx-concurrent-vec = { version = "3.6.0", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive", "rc"] }
thiserror = "2.0.11"
base64-url = "=3.0.0"
uuid = { version = "1.12.0", features = ["v4", "v7", "serde"] }
chrono = "0.4.39"
tracing = "0.1.41"
strum = { version = "0.27.1", features = ["derive"] }
jsonschema = { version = "0.37.4", default-features = false }
serde_json = { version = "1.0.134", features = ["raw_value"] }
sparse-merkle-tree = { version = "0.6.2", git = "https://github.com/nervosnetwork/sparse-merkle-tree.git", rev = "b74ea1bd57a397df82fcf32f2639de7e5248659f", default-features = false, features = ["std", "with-blake2b-ref"] }
blake3 = "1.8.2"

# Only include fmmap for non-wasm32 targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fmmap = { version = "0.4.0", features = ["sync"] }

[dev-dependencies]
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
proptest = { version = "1.6.0", features = ["attr-macro"] }
rand = "0.8.5"
serde_json = "1"
test-case = "3.3.1"
