[package]
name = "catalyst-voting"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = "1.0.56"
rand_core = "0.6.4"
curve25519-dalek = { version = "4.0" }
blake2b_simd = "1.0.2"

[dev-dependencies]
proptest = {version = "1.5.0" }
# Potentially it could be replaced with using `proptest::property_test` attribute macro,
# after this PR will be merged https://github.com/proptest-rs/proptest/pull/523
test-strategy = "0.4.0"
