# cspell: words getrandom

[package]
name = "catalyst-voting"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[[bench]]
name = "vote_protocol"
harness = false

[dependencies]
anyhow = "1.0.89"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rand_chacha = "0.3.1"
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
blake2b_simd = "1.0.2"
rayon = "1.10.0"
proptest = { version = "1.5.0" }

[dev-dependencies]
criterion = "0.5.1"
# Potentially it could be replaced with using `proptest::property_test` attribute macro,
# after this PR will be merged https://github.com/proptest-rs/proptest/pull/523
test-strategy = "0.4.0"
