#cspell: words memchr

[package]
name = "cbork-cddl-parser"
version = "0.0.3"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
derive_more = {version = "1.0.0", features = ["from","display"] }
pest = { version = "2.7.13", features = ["std", "pretty-print", "memchr", "const_prec_climber"] }
pest_derive = { version = "2.7.13", features = ["grammar-extras"] }
thiserror = "1.0.64"
anyhow = "1.0.89"
