[package]
name = "cbork-utils"
version = "0.0.4"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
minicbor = { version = "0.25.1", features = ["std"] }

[dev-dependencies]
proptest = { version = "1.6.0", features = ["attr-macro"] }
