[package]
name = "cbork"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
# Always used a versioned dependency, so that changes to dependent libraries do not cause cascading 
# breakage inside the repo.
cbork-cddl-parser = {version = "0.0.1", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "v0.0.1" }
# Only use this for testing - do not change dependency to this in checked in code.
#cbork-cddl-parser = { path = "../cbork-cddl-parser", version = "0.1.0" }
clap = { version = "4.5.3",  features = ["derive", "env"] }
anyhow = "1.0.71"
console = "0.15.8"

