[package]
name = "cbork"
version = "0.0.3"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
# Always used a versioned dependency, so that changes to dependent libraries do not cause cascading 
# breakage inside the repo.
cbork-cddl-parser = { version = "0.0.3", git = "https://github.com/input-output-hk/catalyst-libs.git", rev = "r20250204-00" }
# Only use this for testing - do not change dependency to this in checked in code.
#cbork-cddl-parser = { path = "../cbork-cddl-parser", version = "0.1.0" }
clap = { version = "4.5.19", features = ["derive", "env"] }
anyhow = "1.0.89"
console = "0.15.8"

