[package]
name = "hermes-ipfs"
version = "0.0.2"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.89"
derive_more = {version = "1.0.0", features = ["from","into","display"] }
libipld = "0.16.0"
rust-ipfs = "0.12.1"
tokio = "1.40.0"

[dev-dependencies]
# Dependencies used by examples
clap = { version = "4.5.19", features = ["derive"] }
dirs = "5.0.1"
lipsum = "0.9.1"
rand = "0.8.5"
rustyline-async = "0.4.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
